syntax = "proto3";

package roady.plugin.v1;

option go_package = "github.com/felixgeelhaar/roady/pkg/domain/plugin/proto";

import "google/protobuf/timestamp.proto";

// Syncer service provides bidirectional sync between Roady and external systems.
service Syncer {
  // Init initializes the syncer with configuration.
  rpc Init(InitRequest) returns (InitResponse);

  // Sync performs a sync operation between Roady plan and external system.
  rpc Sync(SyncRequest) returns (SyncResponse);

  // Push pushes a status change to the external system.
  rpc Push(PushRequest) returns (PushResponse);

  // Subscribe returns a stream of events from the external system (for webhooks).
  rpc Subscribe(SubscribeRequest) returns (stream Event);
}

// InitRequest contains configuration for the syncer.
message InitRequest {
  map<string, string> config = 1;
}

// InitResponse indicates initialization success.
message InitResponse {
  bool success = 1;
  string error = 2;
}

// SyncRequest contains the plan and state to sync.
message SyncRequest {
  Plan plan = 1;
  ExecutionState state = 2;
}

// SyncResponse contains the sync result.
message SyncResponse {
  map<string, string> status_updates = 1;
  map<string, ExternalRef> link_updates = 2;
  repeated string errors = 3;
}

// PushRequest contains a task status change to push.
message PushRequest {
  string task_id = 1;
  string status = 2;
}

// PushResponse indicates push success.
message PushResponse {
  bool success = 1;
  string error = 2;
}

// SubscribeRequest contains subscription parameters.
message SubscribeRequest {
  repeated string event_types = 1;
}

// Event represents an event from the external system.
message Event {
  string id = 1;
  string type = 2;
  string task_id = 3;
  string status = 4;
  string provider = 5;
  google.protobuf.Timestamp timestamp = 6;
  map<string, string> metadata = 7;
}

// Plan represents a Roady plan.
message Plan {
  string id = 1;
  string spec_id = 2;
  repeated Task tasks = 3;
  string approval_status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Task represents a task in a plan.
message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string phase = 4;
  string outcome = 5;
  repeated string dependencies = 6;
  map<string, ExternalRef> external_refs = 7;
}

// ExecutionState represents the execution state of tasks.
message ExecutionState {
  map<string, TaskResult> task_states = 1;
}

// TaskResult represents the result/state of a task.
message TaskResult {
  string status = 1;
  string owner = 2;
  google.protobuf.Timestamp started_at = 3;
  google.protobuf.Timestamp completed_at = 4;
  map<string, ExternalRef> external_refs = 5;
}

// ExternalRef represents a reference to an external system.
message ExternalRef {
  string id = 1;
  string identifier = 2;
  string url = 3;
  google.protobuf.Timestamp last_synced_at = 4;
}
